--- a/Pacman/sample.uvprojx
+++ b/Pacman/sample.uvprojx
@@ -940,7 +940,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>SIMULATTOR</Define>
+              <Define>SIMULATOR</Define>
               <Undefine></Undefine>
               <IncludePath>.\Source;.\Source\button_EXINT;.\Source\led;.\Source\timer;.\Source\CMSIS_core</IncludePath>
             </VariousControls>
